[[changelog-2.0]]
=== 2.0

* Removed query count logging support using spring `HandlerInterceptor`
  - net.ttddyy.dsproxy.support.AbstractQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.QueryCounterClearHandlerInterceptor
  - net.ttddyy.dsproxy.support.JULQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.CommonsQueryCountLoggingHandlerInterceptor
