@@ -51,7 +51,6 @@
     <surefire.version>2.19.1</surefire.version>
     <commons-logging.version>1.1.1</commons-logging.version>
     <slf4j.version>1.7.12</slf4j.version>
-    <spring.version>2.5.6</spring.version>
     <servlet-api.version>2.4</servlet-api.version>
     <jsp-api.version>2.0</jsp-api.version>
     <aopalliance.version>1.0</aopalliance.version>
@@ -265,13 +264,6 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
-      <optional>true</optional>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-jdbc</artifactId>
-      <version>${spring.version}</version>
       <optional>true</optional>
     </dependency>
 
